@@ -1,12 +1,16 @@
 list(APPEND JavaScriptCore_INCLUDE_DIRECTORIES
+    "${WTF_DIR}"
+    "${WTF_DIR}/wtf/efl"
+)
+
+list(APPEND JavaScriptCore_SYSTEM_INCLUDE_DIRECTORIES
     ${ECORE_EVAS_INCLUDE_DIRS}
     ${ECORE_IMF_INCLUDE_DIRS}
     ${ECORE_INCLUDE_DIRS}
     ${EINA_INCLUDE_DIRS}
     ${EO_INCLUDE_DIRS}
-    "${WTF_DIR}"
-    "${WTF_DIR}/wtf/efl"
 )
+
 add_definitions(-DSTATICALLY_LINKED_WITH_WTF)
 
 install(FILES API/JavaScript.h
